# magia-baiser

./: Cargo.toml  README.md  defeat_record.ddl
majia-azuru/: Cargo.toml
majia-azuru/src/: lib.rs  main.rs
src/: defeat_record.rs  hiiragi_utena.rs  lib.rs  main.rs
