[package]
name = "magia-baiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "majia-azuru"
]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }
russh = { version = "0.40", features = ["openssl"] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { workspace = true }
derive_more = { version = "1.0.0-beta.6", features = ["debug"] }
russh = { workspace = true }
russh-keys = "0.40"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
vendor-openssl = ["russh/vendored-openssl"]
