[package]
name = "majia-azuru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh2-tokio = { version = "0.8", features = ["openssl"] }
clap = { workspace = true }
futures-util = "0.3"
russh = { workspace = true }
tabwriter = "1"
tokio = { workspace = true }

[features]
vendor-openssl = ["russh/vendored-openssl"]
